Refactor so we can start working on the validation.