@@ -1,11 +1,10 @@
 package com.github.collector.service;
 
+import com.github.collector.service.domain.DownloadTarget;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -16,18 +15,19 @@ public class HashConverter {
 
     private final Sha256ChecksumProvider sha256ChecksumProvider;
 
-    public Map<String, Path> calculateHashes(final List<Path> paths) {
-        final Map<String, Path> hashPathMap = new HashMap<>();
+    public Map<String, DownloadTarget> calculateHashes(final List<DownloadTarget> downloadTargets) {
+        final Map<String, DownloadTarget> hashPathMap = new HashMap<>();
 
-        for (Path path : paths) {
+        for (DownloadTarget downloadTarget : downloadTargets) {
             try {
-                final String checksum = sha256ChecksumProvider.checksum(Files.readAllBytes(path));
+                final String checksum = sha256ChecksumProvider.checksum(
+                        downloadTarget.getTargetLocation().readAllBytes());
 
                 if (hashPathMap.containsKey(checksum)) {
                     // Was in the batch already as a duplicate
-                    Files.delete(path);
+                    downloadTarget.getTargetLocation().delete();
                 } else {
-                    hashPathMap.put(checksum, path);
+                    hashPathMap.put(checksum, downloadTarget);
                 }
             } catch (IOException e) {
                 // TODO: We need to handle this
